[package]
name = "fast_json"
version = "0.1.0"
authors = []

[lib]
name = "fast_json"
path = "src/lib.rs"
crate-type = ["dylib"]

[features]
default = []

[build-dependencies]
rustler_codegen = { git = "https://github.com/hansihe/Rustler", branch = "remove_nif_from_types" }
#rustler_codegen = { path = "/Users/scrogson/Forks/Rustler/rustler_codegen" }

[dependencies]
error-chain = "0.7.2"
rustler = { git = "https://github.com/hansihe/Rustler", branch = "remove_nif_from_types" }
rustler_codegen = { git = "https://github.com/hansihe/Rustler", branch = "remove_nif_from_types" }
#rustler = { path = "/Users/scrogson/Forks/Rustler" }
#rustler_codegen = { path = "/Users/scrogson/Forks/Rustler/rustler_codegen" }
json = "0.11.0"
lazy_static = "0.2.2"
