[package]
name = "fast_json"
version = "0.1.0"
authors = []

[lib]
name = "fast_json"
path = "src/lib.rs"
crate-type = ["dylib"]

[features]
default = []

[build-dependencies]
rustler_codegen = { git = "https://github.com/hansihe/rustler", branch = "master" }

[dependencies]
error-chain = "0.11.0"
rustler = { git = "https://github.com/hansihe/rustler", branch = "master" }
rustler_codegen = { git = "https://github.com/hansihe/rustler", branch = "master" }
json = "0.11.13"
lazy_static = "1.0.0"
num_cpus = "1.8.0"
scoped-pool = "1.0.0"
