[package]
name = "fast_json"
version = "0.1.0"
authors = []
build = "build.rs"

[lib]
name = "fast_json"
path = "src/lib.rs"
crate-type = ["dylib"]

[features]
default = []
with-syntex = ["rustler_codegen/with-syntex"]

[build-dependencies]
rustler_codegen = { git = "https://github.com/hansihe/Rustler" }
#rustler_codegen = { path = "/Users/scrogson/Forks/Rustler/rustler_codegen" }

[dependencies]
error-chain = "0.7.2"
rustler = { git = "https://github.com/hansihe/Rustler" }
rustler_codegen = { git = "https://github.com/hansihe/Rustler" }
#rustler = { path = "/Users/scrogson/Forks/Rustler" }
#rustler_codegen = { path = "/Users/scrogson/Forks/Rustler/rustler_codegen" }
json = "0.11.0"
lazy_static = "0.2.2"
