[package]
name = "fast_json"
version = "0.1.0"
authors = []
build = "build.rs"

[lib]
name = "fast_json"
path = "src/lib.rs"
crate-type = ["dylib"]

[features]
default = []
with-syntex = ["rustler_codegen/with-syntex"]

[build-dependencies]
rustler_codegen = { git = "https://github.com/hansihe/Rustler" }

[dependencies]
error-chain = "0.7.2"
rustler = { path = "../../../Rustler" }
erlang_nif-sys = ">=0.5"
json = "0.11.0"
