[package]
name = "fast_json"
version = "0.1.0"
authors = ["Sonny Scroggin <sonny@scrogg.in>"]
edition = "2018"

[lib]
name = "fast_json"
crate-type = ["cdylib"]

[dependencies]
failure = "0.1"
json = "0.12"
lazy_static = "1.4"
num_cpus = "1.10"
rustler = "0.21"
serde_json = "1.0"
scoped-pool = "1.0"
simd-json = "0.1"
